AWS S3 integration completed

--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -17,6 +17,11 @@
         heigth: 200px;
         object-fit: cover;
       }
+
+      .list-group-item a{
+        text-decoration: none;
+        color: black;
+      }
     </style>
   </head>
   <body class="m-5">
